--- a/q.qrc
+++ b/q.qrc
@@ -1,9 +1,9 @@
 <RCC>
   <qresource prefix="newPrefix">
     <file>logout.png</file>
-    <file>settings.png</file>
+    <file>../assets/ui/settings.png</file>
     <file>FaceAttend.png</file>
-    <file>user.png</file>
-    <file>chart.png</file>
+    <file>../assets/ui/user.png</file>
+    <file>../assets/ui/chart.png</file>
   </qresource>
 </RCC>
