--- a/record_attendance.ui
+++ b/record_attendance.ui
@@ -19,11 +19,45 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QLabel" name="label_spacer_middle">
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="0" alignment="Qt::AlignLeft">
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>assets/return.png</normaloff>assets/return.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
+       </property>
+       <property name="flat">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QLabel" name="label_spacer_top">
+     <property name="text">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:16pt; font-weight:600; color:#888a85;&quot;&gt;RECORD ATTENDANCE&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="label">
      <property name="text">
       <string/>
      </property>
     </widget>
+   </item>
+   <item>
+    <widget class="QComboBox" name="comboBox"/>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontal_layout">
@@ -46,7 +80,7 @@
        </property>
        <property name="icon">
         <iconset>
-         <normaloff>assets/teachers.png</normaloff>assets/teachers.png</iconset>
+         <normaloff>assets/file.png</normaloff>assets/file.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -79,7 +113,7 @@
        </property>
        <property name="icon">
         <iconset>
-         <normaloff>assets/line_chart.png</normaloff>assets/line_chart.png</iconset>
+         <normaloff>assets/photo_camera.png</normaloff>assets/photo_camera.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -105,6 +139,11 @@
     </widget>
    </item>
   </layout>
+  <zorder>label_spacer_bottom</zorder>
+  <zorder>label_spacer_top</zorder>
+  <zorder>gridLayoutWidget</zorder>
+  <zorder>label</zorder>
+  <zorder>comboBox</zorder>
  </widget>
  <tabstops>
   <tabstop>button_subject_allotment</tabstop>
