--- a/record_attendance.ui
+++ b/record_attendance.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>form_admin_panel</class>
- <widget class="QWidget" name="form_admin_panel">
+ <class>form_record_attendance</class>
+ <widget class="QWidget" name="form_record_attendance">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Admin Panel</string>
+   <string>Record Attendance</string>
   </property>
   <property name="windowIcon">
    <iconset>
@@ -19,9 +19,9 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QGridLayout" name="gridLayout">
+    <layout class="QGridLayout" name="grid_layout">
      <item row="0" column="0" alignment="Qt::AlignLeft">
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="button_back">
        <property name="text">
         <string/>
        </property>
@@ -43,21 +43,38 @@
     </layout>
    </item>
    <item>
-    <widget class="QLabel" name="label_spacer_top">
+    <widget class="QLabel" name="label_record_attendance">
      <property name="text">
       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:16pt; font-weight:600; color:#888a85;&quot;&gt;RECORD ATTENDANCE&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
    </item>
-   <item>
-    <widget class="QLabel" name="label">
+   <item alignment="Qt::AlignHCenter">
+    <widget class="QLabel" name="label_attendance_icon">
      <property name="text">
       <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap>assets/register.png</pixmap>
+     </property>
+    </widget>
+   </item>
+   <item alignment="Qt::AlignHCenter">
+    <widget class="QLabel" name="label_placeholder_1">
+     <property name="text">
+      <string>Select the subject for which you wish to record attendance:</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QComboBox" name="comboBox"/>
+   </item>
+   <item alignment="Qt::AlignHCenter">
+    <widget class="QLabel" name="label_placeholder_2">
+     <property name="text">
+      <string>Select the mode of attendance you prefer:</string>
+     </property>
+    </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontal_layout">
@@ -113,7 +130,7 @@
        </property>
        <property name="icon">
         <iconset>
-         <normaloff>assets/photo_camera.png</normaloff>assets/photo_camera.png</iconset>
+         <normaloff>assets/camera_capture.png</normaloff>assets/camera_capture.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -140,10 +157,11 @@
    </item>
   </layout>
   <zorder>label_spacer_bottom</zorder>
-  <zorder>label_spacer_top</zorder>
-  <zorder>gridLayoutWidget</zorder>
-  <zorder>label</zorder>
+  <zorder>label_record_attendance</zorder>
+  <zorder>label_attendance_icon</zorder>
   <zorder>comboBox</zorder>
+  <zorder>label_placeholder_1</zorder>
+  <zorder>label_placeholder_2</zorder>
  </widget>
  <tabstops>
   <tabstop>button_subject_allotment</tabstop>
